# WAIT-People-Analytics

./: .gitignore  Readme.md  pyproject.toml  requirements.in  requirements.txt  requirements_linux.txt  requirements_windows.txt
conf/base/: catalog.yml  parameters.yml
data/: __init__.py
data/01_Raw/: 01_DataCompetencySurvey.xlsx  01_DataCompetencySurvey_renamed.xlsx  DataCompetencySurvey.xlsx
data/02_Interim/: 01_DataCompetencySurvey.csv  01_DataCompetencySurvey.pq
notebooks/: 01_DataPreprocessing.ipynb  02_ExploratoryDataAnalysis.ipynb  Do raportu.txt
src/wait_people_analytics/: __init__.py  __main__.py
src/wait_people_analytics/pipelines/analysis/: nodes.py  pipeline.py
src/wait_people_analytics/pipelines/clustering/: nodes.py  pipeline.py
src/wait_people_analytics/pipelines/data_analysis/: nodes.py  pipeline.py
src/wait_people_analytics/pipelines/data_processing/: nodes.py  pipeline.py
src/wait_people_analytics/pipelines/insights/: nodes.py  pipeline.py
src/wait_people_analytics/pipelines/preprocessing/: nodes.py  pipeline.py
src/wait_people_analytics/pipelines/raw/: nodes.py  pipeline.py
